[gd_scene load_steps=2 format=3 uid="uid://d3k8d2y5r7x1"]

[ext_resource type="Script" path="res://character_screen.gd" id="1_script"]

[node name="CharacterScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 600.0
offset_bottom = 40.0
text = "CHARACTER SHEET"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 580.0
offset_bottom = 380.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Name: Hero"

[node name="DescLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Description..."
autowrap_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StatsLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Stats..."
